2003-12-01  Miguel Sofer <msofer@users.sf.net>

	* doc/lset.n: fix typo [Bug 852224]

2003-11-21  Don Porter  <dgp@users.sourceforge.net>

	*** 8.4.5 TAGGED FOR RELEASE ***

	* tests/windFCmd.test (winFCmd-16.10):  Corrected failure to
	initialize variable $dd that caused test suite failure.

2003-11-20  Miguel Sofer <msofer@users.sf.net>

	* generic/tclVar.c: fix flag bit collision between
	LOOKUP_FOR_UPVAR and TCL_PARSE_PART1 (deprecated) [Bug 835020] 
	
2003-11-20  Vince Darley  <vincentdarley@users.sourceforge.net>

	* generic/tclIOUtil.c:
	* tests/winFCmd.test: fix to [Bug 845778] - Infinite recursion 
	on [cd] (Windows only bug).
	
2003-11-18  Jeff Hobbs  <jeffh@ActiveState.com>

	* changes: updated for 8.4.5 release

2003-11-17  Don Porter  <dgp@users.sourceforge.net>

	* generic/regcomp.c:	Backported regexp bug fixes and tests.  Thanks
	* generic/tclTest.c:	to Pavel Goran and Vince Darley.
	* tests/reg.test:	[Bugs 230589, 504785, 505048, 703709, 840258]

2003-11-12  Jeff Hobbs  <jeffh@ActiveState.com>

	* tests/cmdMZ.test (cmdMZ-1.4): change to nonPortable as more
	systems are using permissions caching, and this isn't really a Tcl
	controlled issue.

2003-11-11  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/configure:
	* unix/tcl.m4: improve AIX --enable-64bit handling

2003-11-10  Don Porter  <dgp@users.sourceforge.net>

	* tests/unixInit.test (unixInit-2.10): re-enabled.
	* unix/tclUnixInit.c (TclpInitLibraryPath):	Alternative fix
	* win/tclWinInit.c (TclpInitLibraryPath):	for [Bug 832657]
	that should not run afoul of startup constraints.

	* library/dde/pkgIndex.tcl:	Added safeguards so that registry
	* library/reg/pkgIndex.tcl:	and dde packages are not offered
	* win/tclWinDde.c:	on non-Windows platforms.  Bumped to
	* win/tclWinReg.c:	registry 1.1.3 and dde 1.2.2.

2003-11-06  Jeff Hobbs  <jeffh@ActiveState.com>

	* tests/unixInit.test (unixInit-2.10): mark as knownBug
	* generic/tclEncoding.c (TclFindEncodings): revert patch from