@@ -10,7 +10,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: binary.test,v 1.11.2.1 2003/07/11 21:18:55 dkf Exp $
+# RCS: @(#) $Id: binary.test,v 1.11.2.2 2003/12/02 09:31:54 dkf Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -1515,6 +1515,14 @@ test binary-46.5 {Tcl_BinaryObjCmd: handling of non-ISO8859-1 chars} {
     set x [binary scan \u00a4 a* y]
     list $x $y [encoding convertfrom iso8859-15 $y]
 } "1 \u00a4 \u20ac"
+
+test binary-47.1 {Tcl_BinaryObjCmd: number cache reference count handling} {
+    # This test is only reliable when memory debugging is turned on,
+    # but without even memory debugging it should still generate the
+    # expected answers and might therefore still pick up memory corruption
+    # caused by [Bug 851747].
+    list [binary scan aba ccc x x x] $x
+} {3 97}
 
 # cleanup
 ::tcltest::cleanupTests
